--- a/b_json_fetching.ipynb
+++ b/b_json_fetching.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8e6eb76f",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "pip install notebook ipykernel\n"
+    "pip install notebook ipykernel"
    ]
   },
   {
@@ -398,7 +398,7 @@
     "        file.write(dict_content)\n",
     "        \n",
     "# Define the directory path that contains your JSON files\n",
-    "folder_path = 'downloaded_articles'\n",
+    "folder_path = 'json_papers'\n",
     "compound_keywords = extract_compound_keywords_from_json(folder_path)\n",
     "\n",
     "# Save dictionary to a .py file\n",
