--- a/c_model_training.ipynb
+++ b/c_model_training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ac31dfbd",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "from gensim.models import Word2Vec\n",
-    "from cp_words import compound_keywords"
+    "from _cpwords import compound_keywords"
    ]
   },
   {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "7e0404d3",
    "metadata": {},
    "outputs": [
@@ -134,9 +134,9 @@
     }
    ],
    "source": [
-    "model_save_path = \"word2vec_model.model\"\n",
+    "model_save_path = \"nlp_input/word2vec_model.model\"\n",
     "model.save(model_save_path)\n",
-    "model = Word2Vec.load(\"word2vec_model.model\")\n",
+    "model = Word2Vec.load(\"nlp_input/word2vec_model.model\")\n",
     "print(\"Model loaded successfully.\")"
    ]
   },
@@ -335,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
