--- a/d-test.ipynb
+++ b/d-test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c5f7cb68",
    "metadata": {},
    "outputs": [
@@ -327,15 +327,17 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from gensim.models import Word2Vec\n",
-    "import classify_papers as cp\n",
-    "with open(\"ontology.yaml\", \"r\", encoding=\"utf-8\") as f:\n",
+    "import d1_classifier as clsf\n",
+    "with open(\"nlp_input/ontology.yaml\", \"r\", encoding=\"utf-8\") as f:\n",
     "    ont = yaml.safe_load(f) or {}\n",
     "\n",
-    "w2v = Word2Vec.load(\"word2vec_model.model\")\n",
-    "ont_expanded = cp.expand_ontology(w2v, ont)\n",
+    "w2v = Word2Vec.load(\"nlp_input/word2vec_model.model\")\n",
+    "\n",
+    "ont_expanded = clsf.expand_ontology(w2v, ont)\n",
+    "\n",
     "kpi_priority = list(ont.get(\"kpi_resolution\", {}).keys())\n",
     "input_priority = list(ont.get(\"input_resolution\", {}).keys())\n",
-    "input_dir = \"papers_json\"\n",
+    "input_dir = \"json_papers\"\n",
     "results = []\n",
     "\n",
     "for fname in tqdm(os.listdir(input_dir), desc=\"Classifying papers\"):\n",
@@ -343,7 +345,7 @@
     "        continue\n",
     "    with open(os.path.join(input_dir, fname), \"r\", encoding=\"utf-8\") as f:\n",
     "        doc = json.load(f)\n",
-    "    res = cp.analyze_paper(doc, ont_expanded, kpi_priority, input_priority)\n",
+    "    res = clsf.analyze_paper(doc, ont_expanded, kpi_priority, input_priority)\n",
     "    results.append({\"file\": fname, **res})\n",
     "\n",
     "df = pd.DataFrame(results)\n",
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "01f16d37",
    "metadata": {},
    "outputs": [
@@ -365,7 +367,7 @@
     }
    ],
    "source": [
-    "output_csv = \"classified_papers.csv\"\n",
+    "output_csv = \"nlp_output/classified_papers.csv\"\n",
     "df.to_csv(output_csv, index=False)\n",
     "\n",
     "print(f\"[OK] Wrote {output_csv} with {len(df)} rows\")"
