--- a/a_initial_search.ipynb
+++ b/a_initial_search.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "112ae783",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "import re\n",
     "import xmltodict\n",
     "import json\n",
-    "from credentials import keys"
+    "from _credentials import keys"
    ]
   },
   {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ac3d13af",
    "metadata": {},
    "outputs": [
