--- a/c_model_training.ipynb
+++ b/c_model_training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "ac31dfbd",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c60ba76a",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2fea57b8",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "7e0404d3",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "682d71dd",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "9fabd2c0",
    "metadata": {},
    "outputs": [
@@ -178,128 +178,128 @@
      "output_type": "stream",
      "text": [
       "Words similar to 'rl':\n",
-      "drl: 0.8673951029777527\n",
-      "pre-training: 0.7499464750289917\n",
-      "dqn: 0.747580885887146\n",
-      "ddpg: 0.7355743646621704\n",
-      "maddpg: 0.7274594306945801\n",
-      "model-free: 0.7238556146621704\n",
-      "non-stationarity: 0.7223429679870605\n",
-      "ddqn: 0.7099489569664001\n",
-      "rl-based: 0.7083368301391602\n",
-      "single-agent: 0.7039849758148193\n",
-      "learns: 0.6998539566993713\n",
-      "sac: 0.6940401196479797\n",
-      "ddq: 0.6898158192634583\n",
-      "ppo: 0.6891800761222839\n",
-      "irl: 0.6855924129486084\n",
-      "dyna-pinn: 0.6837936639785767\n",
-      "bdq: 0.6813809871673584\n",
-      "gail: 0.6684640049934387\n",
-      "rc-ddq: 0.6657112240791321\n",
-      "learn: 0.6630381941795349\n",
-      "fashion: 0.6607140898704529\n",
-      "learned: 0.6595422625541687\n",
-      "well-trained: 0.657589852809906\n",
-      "policy-gradient: 0.6567992568016052\n",
-      "policy-based: 0.6558753252029419\n",
-      "policy: 0.6531656980514526\n",
-      "chose: 0.6458209156990051\n",
-      "offline: 0.6437338590621948\n",
-      "agent: 0.6435546278953552\n",
-      "mcts: 0.6267192363739014\n",
-      "marl: 0.6246955394744873\n",
-      "value-based: 0.6217694282531738\n",
-      "tl: 0.6204082369804382\n",
-      "pre-trained: 0.6198127865791321\n",
-      "observational: 0.6179376840591431\n",
-      "q-network: 0.6168456077575684\n",
-      "reinforce: 0.6165980100631714\n",
-      "nn-ddq: 0.6137312054634094\n",
-      "overestimation: 0.6127275228500366\n",
-      "fine-tuning: 0.611228883266449\n",
-      "otl: 0.6060397624969482\n",
-      "mbrl: 0.6050821542739868\n",
-      "drl-based: 0.604965090751648\n",
-      "imitation_learning: 0.604762852191925\n",
-      "a2c: 0.6005122661590576\n",
-      "ddpg-based: 0.5993816256523132\n",
-      "q-learning: 0.5965062975883484\n",
-      "tsf: 0.5956545472145081\n",
-      "non-stationary: 0.5951052904129028\n",
-      "sarl: 0.5938380360603333\n",
-      "relearning: 0.5886499881744385\n",
-      "near-optimal_control: 0.5852896571159363\n",
-      "try: 0.5840117931365967\n",
-      "performing: 0.5825886726379395\n",
-      "interact: 0.5798453688621521\n",
-      "trained: 0.5771385431289673\n",
-      "attempt: 0.5768823623657227\n",
-      "citylearn: 0.573920488357544\n",
-      "highlighting: 0.5736115574836731\n",
-      "exploration: 0.5729409456253052\n",
-      "deep_q-learning: 0.5722297430038452\n",
-      "unsl: 0.5720763802528381\n",
-      "cmarl: 0.5717414021492004\n",
-      "sarsa: 0.5685867667198181\n",
-      "action: 0.5636659860610962\n",
-      "variant: 0.5596384406089783\n",
-      "dcrlbb: 0.5585046410560608\n",
-      "trial-and-error: 0.5576779842376709\n",
-      "reward: 0.5562135577201843\n",
-      "performs: 0.5560171008110046\n",
-      "stateaction: 0.5557475686073303\n",
-      "episodic: 0.5548930168151855\n",
-      "cmarl-exne: 0.5537832975387573\n",
-      "state-action: 0.5507919192314148\n",
-      "fine-tuned: 0.548780620098114\n",
-      "physic-based: 0.5487169027328491\n",
-      "pomdp: 0.5477008819580078\n",
-      "branching: 0.5465099811553955\n",
-      "time-saving: 0.5435489416122437\n",
-      "advantage: 0.5402511358261108\n",
-      "deep_q-network: 0.5397502183914185\n",
-      "low-diversity: 0.5389804840087891\n",
-      "episode: 0.5386243462562561\n",
-      "actor: 0.5381639003753662\n",
-      "amend: 0.5372578501701355\n",
-      "q-networks: 0.5352843403816223\n",
-      "experience: 0.533896267414093\n",
-      "interesting: 0.533894419670105\n",
-      "mdp: 0.5332838296890259\n",
-      "explore: 0.5330336689949036\n",
-      "behind: 0.5329150557518005\n",
-      "cmarl-ex: 0.5327144861221313\n",
-      "dueling: 0.5319538712501526\n",
-      "rl-mpc: 0.5316309332847595\n",
-      "unfamiliar: 0.5312100648880005\n",
-      "mpcs: 0.530961811542511\n",
-      "refining: 0.5293176770210266\n",
-      "tianshou: 0.5277135968208313\n",
-      "terminology: 0.5275562405586243\n",
-      "outperform: 0.5269502401351929\n",
+      "drl: 0.8592274785041809\n",
+      "dqn: 0.7611899375915527\n",
+      "learns: 0.729836642742157\n",
+      "model-free: 0.724945604801178\n",
+      "ddpg: 0.7184646129608154\n",
+      "ddqn: 0.6960535049438477\n",
+      "maddpg: 0.6896633505821228\n",
+      "rl-based: 0.6895571947097778\n",
+      "policy-gradient: 0.6804182529449463\n",
+      "learned: 0.6797705292701721\n",
+      "single-agent: 0.6784573197364807\n",
+      "sac: 0.6734286546707153\n",
+      "policy: 0.6724432110786438\n",
+      "pre-training: 0.6674242615699768\n",
+      "ppo: 0.6663268208503723\n",
+      "irl: 0.664676308631897\n",
+      "drl-based: 0.6629266738891602\n",
+      "bdq: 0.6615206003189087\n",
+      "gail: 0.6553522348403931\n",
+      "mcts: 0.655299186706543\n",
+      "reinforce: 0.6524274945259094\n",
+      "dyna-pinn: 0.6515287160873413\n",
+      "rc-ddq: 0.6482321619987488\n",
+      "learn: 0.6480127573013306\n",
+      "non-stationarity: 0.6472879648208618\n",
+      "warm-starting: 0.646366536617279\n",
+      "agent: 0.6379923224449158\n",
+      "marl: 0.6373324394226074\n",
+      "fashion: 0.631766676902771\n",
+      "deep_q-learning: 0.6290871500968933\n",
+      "pre-trained: 0.6253461837768555\n",
+      "well-trained: 0.624663233757019\n",
+      "tl: 0.6225482821464539\n",
+      "observational: 0.615376889705658\n",
+      "ddq: 0.6138175129890442\n",
+      "q-network: 0.609434187412262\n",
+      "value-based: 0.6050118803977966\n",
+      "offline: 0.6011968851089478\n",
+      "overestimation: 0.6001412868499756\n",
+      "imitation_learning: 0.598689079284668\n",
+      "variant: 0.5933249592781067\n",
+      "exploration: 0.5926468968391418\n",
+      "dcrlbb: 0.5925242900848389\n",
+      "trained: 0.5923573970794678\n",
+      "performs: 0.5909609794616699\n",
+      "q-learning: 0.5903527736663818\n",
+      "near-optimal_control: 0.5858339667320251\n",
+      "rl-mpc: 0.5833780169487\n",
+      "unsl: 0.5816968083381653\n",
+      "explore: 0.5806102156639099\n",
+      "action: 0.580292820930481\n",
+      "policy-based: 0.5800146460533142\n",
+      "fine-tuning: 0.5776270627975464\n",
+      "relbot: 0.575825035572052\n",
+      "amend: 0.5755454301834106\n",
+      "surprising: 0.5753592848777771\n",
+      "episodic: 0.5737823247909546\n",
+      "deep_q-network: 0.5734846591949463\n",
+      "non-stationary: 0.5690034627914429\n",
+      "branching: 0.5671020150184631\n",
+      "d3qn: 0.5638238787651062\n",
+      "reward: 0.5616147518157959\n",
+      "performing: 0.561191976070404\n",
+      "episode: 0.5610678195953369\n",
+      "physnet: 0.5609528422355652\n",
+      "trajectory-ranked: 0.5588980317115784\n",
+      "attempt: 0.5588908195495605\n",
+      "sarsa: 0.5583983063697815\n",
+      "tianshou: 0.5580869913101196\n",
+      "sarl: 0.5560688376426697\n",
+      "relearning: 0.5556584000587463\n",
+      "fine-tuned: 0.5556067228317261\n",
+      "nn-ddq: 0.5556036829948425\n",
+      "dueling: 0.5550705790519714\n",
+      "physics-aware: 0.5506302118301392\n",
+      "otl: 0.5480120778083801\n",
+      "transfer_learning: 0.5478568077087402\n",
+      "a-priori: 0.5471043586730957\n",
+      "cmarl: 0.5433614253997803\n",
+      "stateaction: 0.5429306626319885\n",
+      "counterpart: 0.5416972637176514\n",
+      "training: 0.5403083562850952\n",
+      "highlighting: 0.5391932129859924\n",
+      "deep: 0.5388401746749878\n",
+      "action-reward: 0.5378947854042053\n",
+      "specifically: 0.5348877310752869\n",
+      "pre-train: 0.5345008969306946\n",
+      "citylearn: 0.5340993404388428\n",
+      "appealing: 0.5337744355201721\n",
+      "actor: 0.5332733988761902\n",
+      "imitation: 0.5331220626831055\n",
+      "unfamiliar: 0.5323131084442139\n",
+      "deploying: 0.5319939255714417\n",
+      "chose: 0.5317856073379517\n",
+      "try: 0.5317809581756592\n",
+      "trial-and-error: 0.531590461730957\n",
+      "mpc-ode: 0.5298129916191101\n",
+      "mpcs: 0.5289455056190491\n",
+      "adaptability: 0.5270431637763977\n",
+      "state-action: 0.5263131856918335\n",
       "\n",
       "Words similar to 'carbon':\n",
-      "economy: 0.8117650151252747\n",
-      "emission: 0.7643256783485413\n",
-      "urbanization: 0.7074873447418213\n",
-      "decarbonizing: 0.7001002430915833\n",
-      "net-zero: 0.6990650296211243\n",
-      "low-carbon: 0.690885603427887\n",
-      "carbon_emissions: 0.6859979629516602\n",
-      "ghg: 0.663462221622467\n",
-      "greenhouse: 0.6613112688064575\n",
-      "mitigation: 0.6608213782310486\n",
-      "reform: 0.6607627868652344\n",
-      "peaking: 0.6601114273071289\n",
-      "carbon_footprint: 0.6536933183670044\n",
-      "risen: 0.6487932801246643\n",
-      "country: 0.6465206146240234\n",
-      "neutrality: 0.6288716793060303\n",
-      "climate_change: 0.6247106790542603\n",
-      "eschborn: 0.6217330694198608\n",
-      "growth: 0.6195126175880432\n",
-      "social: 0.6179429292678833\n"
+      "economy: 0.8032695055007935\n",
+      "emission: 0.7849946022033691\n",
+      "carbon_emissions: 0.7282648086547852\n",
+      "peaking: 0.6923617720603943\n",
+      "net-zero: 0.6821886897087097\n",
+      "ghg: 0.6778658032417297\n",
+      "carbon_footprint: 0.6724563837051392\n",
+      "greenhouse: 0.6712405681610107\n",
+      "low-carbon: 0.6607341766357422\n",
+      "climate_change: 0.6507430076599121\n",
+      "decarbonizing: 0.6451995968818665\n",
+      "eu: 0.6425002813339233\n",
+      "country: 0.6419606804847717\n",
+      "risen: 0.6402339935302734\n",
+      "mitigation: 0.6344324350357056\n",
+      "neutrality: 0.6250779032707214\n",
+      "reform: 0.6230491399765015\n",
+      "nearly: 0.622559666633606\n",
+      "urbanization: 0.6200520992279053\n",
+      "australian: 0.6113796830177307\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "adda3e5b",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.35463747\n"
+      "0.40574217\n"
      ]
     }
    ],
