--- a/csv_output/d3_boolean_op.ipynb
+++ b/csv_output/d3_boolean_op.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "# Remove duplicates and save remove list\n",
     "remove_df = remove_df.drop_duplicates(subset='DOI')\n",
-    "remove_df.to_csv(\"removed_articles.csv\", index=False)\n",
+    "remove_df.to_csv(\"300_manually_filtered/removed_articles.csv\", index=False)\n",
     "\n",
     "# Clean and filter main list\n",
     "main_df['DOI'] = main_df['DOI'].astype(str).str.strip()\n",
@@ -75,7 +75,7 @@
     "final_df = final_df.drop_duplicates(subset='DOI')  # Remove any duplicates\n",
     "\n",
     "# Save results\n",
-    "final_df.to_csv(\"papers_included_filtered.csv\", index=False)\n",
+    "final_df.to_csv(\"300_manually_filtered/papers_included_filtered.csv\", index=False)\n",
     "\n",
     "# Show summary\n",
     "print(f\"\\nOriginal: {len(main_df)} articles\")\n",
