--- a/e_analysis.ipynb
+++ b/e_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8833edd3",
    "metadata": {},
    "outputs": [],
@@ -42,18 +42,62 @@
     "only_in_csv2  = merged[merged[\"match_type\"] == \"csv2_only\"]\n",
     "\n",
     "# Save near df1 with suffixes\n",
-    "p1 = Path(df1_path); out_dir, base, ext = p1.parent, p1.stem, p1.suffix\n",
+    "p1 = Path(df1_path)\n",
+    "out_dir, base, ext = p1.parent, p1.stem, p1.suffix\n",
+    "\n",
     "matching_query.to_csv(out_dir / f\"{base}matching{ext}\", index=False)\n",
     "\n",
     "if not only_in_csv1.empty:\n",
-    "    print(\"\\nRows only in CSV1:\")\n",
-    "    print(only_in_csv1)\n",
     "    only_in_csv1.to_csv(out_dir / f\"{base}_only_in_csv1{ext}\", index=False)\n",
     "\n",
     "if not only_in_csv2.empty:\n",
-    "    print(\"\\nRows only in CSV2:\")\n",
-    "    print(only_in_csv2)\n",
-    "    only_in_csv2.to_csv(out_dir / f\"{base}_only_in_csv2{ext}\", index=False)"
+    "    only_in_csv2.to_csv(out_dir / f\"{base}_only_in_csv2{ext}\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac107eef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def _norm_doi(s: pd.Series) -> pd.Series:\n",
+    "    return s.astype(str).str.strip().str.lower()\n",
+    "\n",
+    "# Paths\n",
+    "verification_path = r\"csv_output\\300_manually_filtered\\_verification-list.csv\"\n",
+    "matching_path     = out_dir / f\"{base}matching{ext}\"\n",
+    "\n",
+    "# Load\n",
+    "matching_df = pd.read_csv(matching_path)\n",
+    "verify_df   = pd.read_csv(verification_path)\n",
+    "\n",
+    "# Normalize verification DOIs\n",
+    "verify_df[\"doi_norm\"] = _norm_doi(verify_df[\"DOI\"])\n",
+    "\n",
+    "# Ensure matching has doi_norm (derive if missing)\n",
+    "if \"doi_norm\" not in matching_df.columns:\n",
+    "    if \"DOI\" in matching_df.columns:\n",
+    "        matching_df[\"doi_norm\"] = _norm_doi(matching_df[\"DOI\"])\n",
+    "    elif \"file\" in matching_df.columns:\n",
+    "        matching_df[\"doi_norm\"] = (\n",
+    "            matching_df[\"file\"].astype(str).str.strip().str.lower()\n",
+    "                      .str.replace(r\"\\.json$\", \"\", regex=True)\n",
+    "                      .str.replace(\"_\", \"/\", n=1)\n",
+    "        )\n",
+    "\n",
+    "# Semi-join: keep FULL rows from matching for DOIs in verification list\n",
+    "review_full = matching_df.merge(\n",
+    "    verify_df[[\"doi_norm\", \"DOI\"]].rename(columns={\"DOI\": \"DOI_verify\"}),\n",
+    "    on=\"doi_norm\",\n",
+    "    how=\"inner\"\n",
+    ")\n",
+    "\n",
+    "# Save full-column review file\n",
+    "review_full_out = out_dir / f\"{base}review{ext}\"\n",
+    "review_full.to_csv(review_full_out, index=False)"
    ]
   }
  ],
