--- a/d1.ipynb
+++ b/d1.ipynb
@@ -23,7 +23,9 @@
    "cell_type": "markdown",
    "id": "25398d4f",
    "metadata": {},
-   "source": []
+   "source": [
+    "python d.py --input_dir papers_json_mini --ontology ontology.yaml --model word2vec.model --output_csv focused_papers.csv --output_json evidence.json --jobs 8\n"
+   ]
   }
  ],
  "metadata": {
