--- a/d1.ipynb
+++ b/d1.ipynb
@@ -9,14 +9,43 @@
     }
    },
    "source": [
+    "# Background\n",
     "### Research Questions:\n",
     "\n",
-    "1. What models are used to identify and reduce building energy waste, and what are their types (physics-based, data-driven, or hybrid) and scales (whole building, system level, or boundary conditions such as occupancy and weather)?\n",
+    "1. What models are used to identify and reduce building energy waste, of what types (physics-based, data-driven, or hybrid) and at what scales (whole building, system level, or boundary conditions such as occupancy and weather)?\n",
     "\n",
     "2. What data are required to develop and apply these models for identifying and reducing building energy waste?\n",
     "\n",
-    "---\n",
-    "Model <--> Data"
+    "\n",
+    "### Discussion:\n",
+    "\n",
+    "1. What you hope to do ultimately\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba466e6a",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "# NLP\n",
+    "### Code formulation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce989708",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "### Run this at CLI"
    ]
   },
   {
@@ -24,22 +53,10 @@
    "id": "25398d4f",
    "metadata": {},
    "source": [
-    "python d1_classifier.py --input_dir papers_json --ontology archives/ontology.yaml --model word2vec.model --output_csv NLP-output/focused_papers.csv --output_json NLP-output/evidence.json --jobs 8\n"
+    "```\n",
+    "python d1_classifier.py --input_dir elsevier_out\\papers_ftrr --ontology archives/ontology.yaml --model word2vec.model --output_csv nlp_output/final/focused_papers.csv --output_json nlp_output/final/evidence.json --jobs 8\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "755467b7",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "066cef09",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
