--- a/d1.ipynb
+++ b/d1.ipynb
@@ -54,7 +54,12 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python d1_classifier.py --input_dir elsevier_out\\papers_ftrr --ontology archives/ontology.yaml --model word2vec.model --output_csv nlp_output/final/focused_papers.csv --output_json nlp_output/final/evidence.json --jobs 8\n",
+    "python d1_classifier.py --input_dir elsevier_oupapers_ftrr --ontology archives/ontology.yaml --model word2vec.model --output_csv nlp_output/final/focused_papers.csv --output_json nlp_output/final/evidence.json --jobs 8\n",
+    "\n",
+    "\n",
+    "python bi_classifier.py --input_dir elsevier_out/papers_ftrr --ontology archives/ontology.yaml --model word2vec.model           # optional (enables W2V alias snapping) --anchor_csv nlp_output/anchor_first.csv --model_csv  nlp_output/model_first.csv --excel_out  nlp_output/bidirectional_results.xlsx --context_k 1  --jobs 8\n",
+    "\n",
+    "\n",
     "```"
    ]
   }
